# brasd

./: .bzrignore  .gitignore  ANNOUCEMENT  BUGS  COPYING  CREDITS  Changelog  INSTALL  Makefile.am  Makefile.in  README  README.chinese  README.md  TODO  brasd.init  brasd.recipe  config.h.in  configure  configure.ac  mkdeb  mkppa
bras-client/: Makefile.am  Makefile.in  bras.cpp  bras.h  logindlg.cpp  logindlg.h  main.cpp  main.h  options.cpp  options.h  utils.cpp  utils.h
bras-client/ui/: Makefile.am  Makefile.in  bras-client.desktop  login.ui
data/: Makefile.am  Makefile.in  add-route-table  brasd  chap-secrets  options.l2tpd  rm-route-table  xl2tpd.conf
debian/: Makefile.am  Makefile.in  README.Debian  brasd.postinst.debhelper  brasd.postrm.debhelper  brasd.prerm.debhelper  brasd.substvars  changelog  control  copyright  files  init.d  preinst
installer/: generate_installer.sh  installer.sh
packaging/fedora/: brasd.spec
src/: Makefile.am  Makefile.in  ae.c  anet.c  anet.h  bras.c  bras.h  brasd.h  list.c  list.h  main.c  sds.c  server.c  server.h  utils.c  utils.h
